--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "stdio.h": "c",
         "test.h": "c",
         "reader.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "automaton.h": "c",
+        "stdbool.h": "c"
     }
 }
